--- a/el8-x86_64/pom.xml
+++ b/el8-x86_64/pom.xml
@@ -22,13 +22,13 @@
     <parent>
         <groupId>org.wildfly.openssl</groupId>
         <artifactId>wildfly-openssl-parent</artifactId>
-        <version>1.1.2.Final-SNAPSHOT</version>
+        <version>2.0.0.Alpha1-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
     <groupId>org.wildfly.openssl</groupId>
     <artifactId>wildfly-openssl-el8-x86_64</artifactId>
-    <version>1.1.2.Final-SNAPSHOT</version>
+    <version>2.0.0.Alpha1-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
