--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <groupId>org.wildfly.openssl</groupId>
     <artifactId>wildfly-openssl-parent</artifactId>
-    <version>1.1.2.Final-SNAPSHOT</version>
+    <version>2.0.0.Alpha1-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
