--- a/windows-i386/pom.xml
+++ b/windows-i386/pom.xml
@@ -21,7 +21,7 @@
 
     <parent>
         <groupId>org.wildfly.openssl</groupId>
-        <artifactId>wildfly-openssl-parent</artifactId>
+        <artifactId>wildfly-openssl-natives-parent</artifactId>
         <version>2.0.0.Alpha1-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
