Ensure the sources jar gets produced as it is needed when running the Java tests

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
     </licenses>
 
     <build>
+        <sourceDirectory>../libwfssl/src</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
