--- a/linux-rhel6-i386/pom.xml
+++ b/linux-rhel6-i386/pom.xml
@@ -30,6 +30,10 @@
     <artifactId>wildfly-openssl-linux-rhel6-i386</artifactId>
     <version>2.2.0.CR1-SNAPSHOT</version>
 
+    <properties>
+      <jdk.min.version>1.8</jdk.min.version>
+    </properties>
+
     <packaging>jar</packaging>
 
     <build>
