--- a/solaris-x86_64/pom.xml
+++ b/solaris-x86_64/pom.xml
@@ -30,6 +30,10 @@
     <artifactId>wildfly-openssl-solaris-x86_64</artifactId>
     <version>2.2.0.CR1-SNAPSHOT</version>
 
+    <properties>
+      <jdk.min.version>1.8</jdk.min.version>
+    </properties>
+
     <packaging>jar</packaging>
 
     <build>
