--- a/linux-i386/pom.xml
+++ b/linux-i386/pom.xml
@@ -22,13 +22,13 @@
     <parent>
         <groupId>org.wildfly.openssl</groupId>
         <artifactId>wildfly-openssl-natives-parent</artifactId>
-        <version>2.1.0.SP01</version>
+        <version>2.2.0.CR1-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
     <groupId>org.wildfly.openssl</groupId>
     <artifactId>wildfly-openssl-linux-i386</artifactId>
-    <version>2.1.0.SP01</version>
+    <version>2.2.0.CR1-SNAPSHOT</version>
 
     <properties>
       <jdk.min.version>1.8</jdk.min.version>
