[SSLNTV-14] add support for macos aarch64

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
             </activation>
             <modules>
                 <module>macosx-x86_64</module>
+                <module>macosx-aarch64</module>
             </modules>
         </profile>
         <profile>
