--- a/windows-i386/pom.xml
+++ b/windows-i386/pom.xml
@@ -22,13 +22,13 @@
     <parent>
         <groupId>org.wildfly.openssl</groupId>
         <artifactId>wildfly-openssl-natives-parent</artifactId>
-        <version>2.2.0.SP01</version>
+        <version>2.2.1.CR1-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
     <groupId>org.wildfly.openssl</groupId>
     <artifactId>wildfly-openssl-windows-i386</artifactId>
-    <version>2.2.0.SP01</version>
+    <version>2.2.1.CR1-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
