--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <groupId>org.wildfly.openssl</groupId>
     <artifactId>wildfly-openssl-natives-parent</artifactId>
-    <version>2.2.1.Final</version>
+    <version>2.2.2.CR1-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
