--- a/solaris-sparcv9/pom.xml
+++ b/solaris-sparcv9/pom.xml
@@ -22,13 +22,13 @@
     <parent>
         <groupId>org.wildfly.openssl</groupId>
         <artifactId>wildfly-openssl-natives-parent</artifactId>
-        <version>2.2.3.CR1-SNAPSHOT</version>
+        <version>2.2.2.SP01</version>
         <relativePath>../</relativePath>
     </parent>
 
     <groupId>org.wildfly.openssl</groupId>
     <artifactId>wildfly-openssl-solaris-sparcv9</artifactId>
-    <version>2.2.3.CR1-SNAPSHOT</version>
+    <version>2.2.2.SP01</version>
 
     <properties>
       <jdk.min.version>1.8</jdk.min.version>
