--- a/.github/workflows/build-natives.yaml
+++ b/.github/workflows/build-natives.yaml
@@ -10,6 +10,9 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        working-directory: main
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -18,10 +21,17 @@ jobs:
             vcvars: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat
     steps:
       - uses: actions/checkout@v2
+        with:
+          path: main
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Checkout wildfly-openssl for test purposes
+        uses: actions/checkout@v2
+        with:
+          repository: wildfly-security/wildfly-openssl
+          path: wildfly-openssl
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
@@ -48,10 +58,23 @@ jobs:
           VCVARS: ${{ matrix.vcvars }}
         shell: cmd
         run: |
-          call "%VCVARS%" x64          
+          call "%VCVARS%" x64
           set PATH=C:\vcpkg\installed\x64-windows\tools\openssl;%PATH%
           openssl version -v
-          mvn -B package --file pom.xml
+          mvn -B install --file pom.xml
+      - if: matrix.os == 'windows-latest'
+        name: Run tests with the built Windows native
+        env:
+          VCVARS: ${{ matrix.vcvars }}
+        working-directory: wildfly-openssl
+        shell: cmd
+        run: |
+          call "%VCVARS%" x64
+          set PATH=C:\vcpkg\installed\x64-windows\tools\openssl;%PATH%
+          openssl version -v
+          for /f "tokens=3 delims=<> skip=1" %%v in ('findstr "<version>" ..\main\pom.xml') do set WILDFLY_OPENSSL_NATIVES_VERSION=%%v
+          echo Running tests with WildFly OpenSSL Natives %WILDFLY_OPENSSL_NATIVES_VERSION%
+          mvn -B verify --file pom.xml -Dorg.wildfly.openssl.path="C:\vcpkg\installed\x64-windows\tools\openssl" -Dversion.org.wildfly.openssl.natives=%WILDFLY_OPENSSL_NATIVES_VERSION%
       - if: ${{ github.event_name == 'push' }}
         name: Archive the built native artifacts if this is a tag
         uses: actions/upload-artifact@v2
