[SSLNTV-34] Add a new GitHub workflow to trigger native builds for pull requests and tags for MacOS

--- a/.github/workflows/build-natives.yaml
+++ b/.github/workflows/build-natives.yaml
@@ -15,7 +15,7 @@ jobs:
         working-directory: main
     strategy:
       matrix:
-        os: [windows-latest]
+        os: [windows-latest, macos-latest]
         include:
           - os: windows-latest
             vcvars: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat
@@ -40,18 +40,24 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Maven Version Info
         run: mvn -version
-      - if: matrix.os != 'windows-latest'
+      - if: matrix.os == 'macos-latest'
         name: OpenSSL Library Version Info
-        run: openssl version -v
+        run: |
+          export PATH="/usr/local/opt/openssl@3/bin:$PATH"
+          openssl version
       - if: matrix.os == 'windows-latest'
         name: Install Full OpenSSL Library
         run: |
           vcpkg install openssl:x64-windows
-      - if: matrix.os != 'windows-latest'
-        name: Build with Maven
+      - if: matrix.os == 'macos-latest'
+        name: Build WildFly OpenSSL natives
+        id: build-wildfly-openssl-natives
         run: |
-          openssl version -v
-          mvn -B package --file pom.xml
+          export PATH="/usr/local/opt/openssl@3/bin:$PATH"
+          echo "OpenSSL version used is:"
+          openssl version 
+          mvn -B install --file pom.xml
+          echo "WILDFLY_OPENSSL_NATIVES_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_OUTPUT
       - if: matrix.os == 'windows-latest'
         name: Build with Microsoft Visual Studio native tools command prompt and Maven
         env:
@@ -75,6 +81,15 @@ jobs:
           for /f "tokens=3 delims=<> skip=1" %%v in ('findstr "<version>" ..\main\pom.xml') do set WILDFLY_OPENSSL_NATIVES_VERSION=%%v
           echo Running tests with WildFly OpenSSL Natives %WILDFLY_OPENSSL_NATIVES_VERSION%
           mvn -B verify --file pom.xml -Dorg.wildfly.openssl.path="C:\vcpkg\installed\x64-windows\tools\openssl" -Dversion.org.wildfly.openssl.natives=%WILDFLY_OPENSSL_NATIVES_VERSION%
+      - if: matrix.os == 'macos-latest'
+        name: Run tests with the built MacOS native
+        working-directory: wildfly-openssl
+        run: |
+          export PATH="/usr/local/opt/openssl@3/bin:$PATH"
+          openssl version
+          export WILDFLY_OPENSSL_NATIVES_VERSION=${{ steps.build-wildfly-openssl-natives.outputs.WILDFLY_OPENSSL_NATIVES_VERSION }}
+          echo Running tests with WildFly OpenSSL Natives $WILDFLY_OPENSSL_NATIVES_VERSION
+          mvn -B verify --file pom.xml -Dorg.wildfly.openssl.path="/usr/local/opt/openssl@3/lib" -Dversion.org.wildfly.openssl.natives=$WILDFLY_OPENSSL_NATIVES_VERSION
       - if: ${{ github.event_name == 'push' }}
         name: Archive the built native artifacts if this is a tag
         uses: actions/upload-artifact@v2
