--- a/.github/workflows/build-natives.yaml
+++ b/.github/workflows/build-natives.yaml
@@ -9,13 +9,14 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}-jdk${{ matrix.java }}
     defaults:
       run:
         working-directory: main
     strategy:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
+        java: ['11', '21']
         include:
           - os: windows-latest
             vcvars: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat
@@ -23,10 +24,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           path: main
-      - name: Set up JDK 11
+      - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: ${{ matrix.java }}
       - name: Checkout wildfly-openssl for test purposes
         uses: actions/checkout@v3
         with:
